@@ -4,7 +4,7 @@ Donate link: https://wpgeodirectory.com
 Tags:  directory plugin, business directory, listings directory, yelp clone, tripadvisor clone, address book, addressbook, addresses, bio, biographies, bios, business, business directory plugin, business-directory, businesses, church, directories, directory, directory widget, geodirectory, googlemap, googlemaps, google maps, list, listings, lists, member directory, members directories, members directory, microformat, microformats, multisite, profile, profiles, staff, user, users, vcard, wordpress business directory, wordpress directory, wordpress directory plugin, yellow pages clone, wordpress business directory plugin, wordpress directory theme, wordpress business directory theme, wordpress city directory plugin, wordpress local directory plugin
 Requires at least: 3.1
 Tested up to: 4.7
-Stable tag: 1.6.16
+Stable tag: 1.6.17
 License: GPLv3
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
 
@@ -144,6 +144,10 @@ GeoDirectory comes with some dummy data you can use to see how listings look. Yo
 7. GD WordPress Admin Page.
 
 == Changelog ==
+
+= 1.6.17 =
+
+[GeoDirectory changelog for version 1.6.17](http://wpgeodirectory.com/change-logs/#v1.6.17).
 
 = 1.6.16 =
 
